--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -33,17 +33,30 @@ p {
 
 
 // HEADER
+
 .shell-logo{
   padding-top: .8rem;
 }
+
 .header {
-  height: 6rem;
   padding: .2rem;
   background-color: $light-gray;
   -moz-box-shadow:    0 -.125rem .5rem .25rem rgba(0,0,0,.25);
   -webkit-box-shadow: 0 -.125rem .5rem .25rem rgba(0,0,0,.25);
   box-shadow:         0 -.125rem .5rem .25rem rgba(0,0,0,.25);
-  
+}
+.navbar {
+  padding: 0;
+
+  .navbar-nav {
+    li a {
+      padding: 2rem;
+      &: hover {
+        background: white;
+      }
+    }
+  }
+
 }
 
 
@@ -62,12 +75,11 @@ p {
 
 .video-container {
   position: absolute;
-  top:0%;
-  left:0%;
-  min-height:100%;
-  min-width:100%;
+  top: 0%;
+  left: 0%;
+  min-height: 100%;
+  min-width: 100%;
   overflow: hidden;
-  z-index: -100;
 }
 
 .overlay {
@@ -76,38 +88,42 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10;
   background: linear-gradient(rgba(221,102,102,.5), rgba(221,102,102,.5)), rgba(0,0,0,0.25);
 }
 
 video#bgvid {
   position: absolute; 
-  z-index:0;
   min-width: 100%;
-  background:url(/images/timelapse.jpg);
+  background: url(/images/timelapse.jpg);
 }
 
 .content {
   background: white;
 }
 
+.subscribe{
+  border-bottom: 1px solid $light-gray;
+  .row{
+    padding: 1rem;
+  }
+}
+
 #subscribe{
   border: none;
-  border-bottom: 1px solid $gray
   outline: none;
   width: 100%;
-  padding: 1.5rem;
+  padding: 2rem;
   font-size: 3rem;
   color: $gray;
 }
 
 
 .col-sm-12{
-  padding-top:4rem;
+  padding-top: 4rem;
 }
 .startup {
   opacity: .8;
-  &:hover {
+  &: hover {
     opacity: 1;
   }
   padding-right: 1rem;
@@ -126,7 +142,7 @@ button.apply {
   font-weight: $bold;
   font-size: 3rem;
   width: 100%;
-  &:hover {
+  &: hover {
     color: $light-gray;
   }
 }
@@ -145,13 +161,13 @@ input {
 
 // FANCY STYLEZ
 
-::-moz-selection {
+: : -moz-selection {
     background: $red;
     color: $white;
     text-shadow: none;
 }
 
-::selection {
+: : selection {
     background: $red;
     color: $white;
     text-shadow: none;
